# ai_supply_chain_trading

./: .cursorrules  .env.example  .env.template  .gitignore  .mcp.json  ACTIVE_RISK_REGISTER.md  AGENTS.md  AI_RULES.md  ALIGNMENT_FIX.md  BACKLOG.md  BEST_COVERAGE_APPROACH.md  CLAUDE.md  CONTEXT.md  GIT_SAFE_COMMIT.md  GIT_WORKFLOW.md  PROGRESS_REPORT.md  PROJECT_MAP.md  README.md  REVIEW_BRIEF.md  REVIEW_SCOPE.md  RUN.md  STATE_HANDOFF.md  STORY.md  THESIS_SCHEMA.json  TOOL_INDEX.md  check_csv_format.py  debug_signal_issue.py  download_5_tickers_csv.py  download_from_list.py  download_full_dataset.py  download_more_tickers.py  download_news_marketaux.py  download_simple.py  environment.yml  process_polygon_news.py  pyproject.toml  requirements.txt  run_e2e_pipeline.py  run_phase1_test.py  run_phase2_pipeline.py  (+14 more)
.claude/: CLAUDE.md  settings.json  settings.local.json
auditor/: __init__.py  bom_decomposer.py  financial_fetcher.py  market_cap_lookup.py  orchestrator.py  supply_chain_scraper.py  tdo_gate.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
config/: auditor_config.yaml  config.yaml  data_config.yaml  instruments.yaml  layered_signal_config.yaml  model_config.yaml  optimizer_config.yaml  signal_weights.yaml  strategy_params.yaml  strategy_params.yaml.bak  technical_master_score.yaml  trading_config.yaml  universe.yaml
contracts/: regime_ledger_callsite.md  target_weight_snapshot_2024-01-08.json
docs/: ARCHITECTURE.md  BACKTEST_JOURNAL.md  BLUEPRINT_DYNAMIC_UNIVERSE_EXPANSION.md  CASE_FACTS.md  CHANGELOG_BUGFIXES.md  DATA.md  (+52 more)
(+381 files in other folders)
