[project]
name = "ai_supply_chain_trading"
description = "Autonomous end-to-end quantitative trading pipeline"
requires-python = ">=3.11"
version = "0.1.0"

# Runtime dependencies are managed via conda environment.yml.
# This file exists for tooling compatibility (pytest, ruff, mypy).

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -q"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"
